--- a/src/main/resources/META-INF/microprofile-config.properties
+++ b/src/main/resources/META-INF/microprofile-config.properties
@@ -20,3 +20,9 @@ app.greeting=Hello
 # Microprofile server properties
 server.port=8080
 server.host=0.0.0.0
+
+
+#
+microservice-Orchestrator/mp-rest/url=https://madrid-gigispizza.wedoteam.io
+microservice-Orchestrator/mp-rest/connectTimeout=5000
+microservice-Orchestrator/mp-rest/responseTimeout=5000
