--- a/pom.xml
+++ b/pom.xml
@@ -33,6 +33,8 @@
 
     <properties>
         <mainClass>io.helidon.examples.quickstart.mp.Main</mainClass>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <maven.compiler.release>11</maven.compiler.release>
     </properties>
 
     <dependencies>
@@ -71,7 +73,7 @@
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-dependency-plugin</artifactId>
+                <artifactId>maven-dependency-plugin</artifactId>                
                 <executions>
                     <execution>
                         <id>copy-libs</id>
