--- a/src/main/resources/META-INF/microprofile-config.properties
+++ b/src/main/resources/META-INF/microprofile-config.properties
@@ -22,9 +22,9 @@ server.port=8080
 server.host=0.0.0.0
 
 # Microservice server properties
-#microservice-Orchestrator/mp-rest/url=https://madrid-gigispizza.wedoteam.io
-#microservice-Orchestrator/mp-rest/connectTimeout=5000
-#microservice-Orchestrator/mp-rest/readTimeout=5000
+microservice-Orchestrator/mp-rest/url=https://madrid-gigispizza.wedoteam.io
+microservice-Orchestrator/mp-rest/connectTimeout=5000
+microservice-Orchestrator/mp-rest/readTimeout=5000
 
 minThreads=15
 maxThreads=15
